add style to pages

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,7 +2,7 @@
  *= require_self
  */
 
-@import 'normalize';
-@import 'globa.css.scss';
-@import 'docs.scss';
-@import 'welcome.css.scss';
+ @import 'normalize';
+ @import "global.css.scss";
+ @import "docs.scss";
+ @import "welcome.scss";
