--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -1,1 +1,13 @@
-%h1 Voila! This is your first page!
+#banner
+  .banner_content
+    %h1 Cabit Documentos
+    %p Agilizando seus Documentos
+    = link_to "Criar Conta", new_user_registration_path, :class => "botao-main"
+
+#callouts
+  .callout_inner
+    .wrapper
+      .callout
+        %h2 Organização de Documentos
+        %p Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+        
