--- a/app/views/docs/index.html.haml
+++ b/app/views/docs/index.html.haml
@@ -1,6 +1,13 @@
-- @docs.each do |doc|
-  %h2= link_to doc.title, doc
-  %p= time_ago_in_words(doc.created_at)
-  %p= truncate(doc.content, length:50)
-
-= link_to "Novo Documento", new_doc_path
+.wrapper_with_padding
+  #docs.clearfix
+    - unless @docs.blank?
+      - @docs.each do |doc|
+        %a{ href: (url_for [doc])}
+          .doc
+            %h2.title= doc.title
+            %p.date= time_ago_in_words(doc.created_at)
+            %p.content= truncate(doc.content, length:80)
+    - else
+      %h2 Criar Documento
+      %p Começe a criar Documentos e organize sua vida!
+      = link_to "Criar Documento", new_doc_path, :class => "botao-main"
