--- a/app/views/docs/edit.html.haml
+++ b/app/views/docs/edit.html.haml
@@ -1,4 +1,5 @@
-%h1 Editar Documentos
-= render 'form'
+.wrapper_with_padding
+  %h1 Editar Documentos
+  = render 'form'
 
-= link_to "Voltar", doc_path(@doc)
+  = link_to "Voltar", doc_path(@doc)
